Bug 304462 - kmail-4.8.3 "Select recipients" dialog ignores the "Completion order" that is set in the preferences
Summary: kmail-4.8.3 "Select recipients" dialog ignores the "Completion order" that is...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.8.3
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-02 19:09 UTC by Christian
Modified: 2015-02-11 12:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian 2012-08-02 19:09:16 UTC
The address book folders that are shown in that dialog window are not in the right order. (They don't seem to have any particular order at all, at least I can't figure it out.)

Reproducible: Always

Steps to Reproduce:
1. Have several address book folders in your addressbook(s).
2. In the KMail configuration settings, on the "Writing messages" group, first tab, use the button to define a Completion order. Arrange the address book folders in the relevant order.
3. Save the preferences.
4. Open a New message (Compose) window.
5. Use Tools menu, Select recipients...

Actual Results:  
The entries there are not in the order that was specified in (2) above.

Expected Results:  
The entries should be in the order specified in (2).
Comment 1 Laurent Montel 2015-02-11 12:48:24 UTC
Git commit eefcfdcbde1ed7f0709d1ad7231fa87ac39f2dd2 by Montel Laurent.
Committed on 11/02/2015 at 12:41.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 304462 - kmail-4.8.3 "Select recipients" dialog ignores the "Completion order" that is set in the preferences

FIXED-IN: 4.14.6

M  +5    -2    libkdepim/addressline/addresseelineedit.cpp

http://commits.kde.org/kdepim/eefcfdcbde1ed7f0709d1ad7231fa87ac39f2dd2