Fix Bug 304462 - kmail-4.8.3 "Select recipients" dialog ignores the "Completion order" that is set in the preferences

FIXED-IN: 4.14.6
BUG: 304462